[package]
name = "psql-srv"
version = "0.1.0"
publish = false
authors = ["Readyset Technology, Inc. <info@readyset.io>"]
edition = "2021"
autotests = false
description = "Bindings for emulating a PostgreSQL server"
readme = "README.md"

[[test]]
name = "tests"
path = "tests.rs"

[build-dependencies]
test-discovery = { path = "../test-discovery" }

[dependencies]
base64 = { workspace = true }
bit-vec = { workspace = true, features = ["serde"] }
bytes = { workspace = true }
chrono = { workspace = true }
cidr = { workspace = true }
eui48 = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
nom = { workspace = true }
postgres = { workspace = true }
postgres-protocol = { workspace = true }
postgres-types = { workspace = true, features = [
    "with-chrono-0_4",
    "with-cidr-0_2",
] }
rand = { workspace = true }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
sha2 = { workspace = true }
smallvec = { workspace = true }
stringprep = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-native-tls = { workspace = true }
tokio-postgres = { workspace = true, features = [
    "with-chrono-0_4",
    "with-eui48-1",
    "with-uuid-0_8",
    "with-serde_json-1",
    "with-bit-vec-0_6",
] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }
uuid = { workspace = true }

database-utils = { path = "../database-utils" }
readyset-adapter-types = { path = "../readyset-adapter-types" }
readyset-data = { path = "../readyset-data" }
readyset-decimal = { path = "../readyset-decimal" }
readyset-sql = { path = "../readyset-sql" }
readyset-util = { path = "../readyset-util" }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-test = { workspace = true }
database-utils = { path = "../database-utils" }
readyset-tracing = { path = "../readyset-tracing" }
postgres-native-tls = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
test-utils = { path = "../test-utils" }

[[bench]]
name = "parse"
harness = false

[lints]
workspace = true
