[package]
name = "query-generator"
publish = false
version = "0.1.0"
authors = ["ReadySet Technology, Inc. <info@readyset.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.38"
chrono = "0.4.19"
clap = { version = "4.2", features = ["derive","env"] }
derive_more = "0.99.11"
futures-util = "0.3.13"
itertools = "0.10"
lazy_static = "1.4.0"
nom-sql = { path = "../nom-sql" }
readyset-data = { path = "../readyset-data/" }
rand = "0.8.3"
regex = "1.4.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.63"
strum = "0.23"
strum_macros = "0.23"
thiserror = "1.0.26"
readyset-util = { path = "../readyset-util" }
proptest = "1.0.0"
test-strategy = "0.2.0"
rust_decimal = { version = "1.26" }
eui48 = { workspace = true }
uuid = "0.8"
bit-vec = { version = "0.6", features = ["serde"] }
rand_regex = "0.15.1"
zipf = "7.0.0"
parking_lot = "0.11.2"
growable-bloom-filter = "2.0.1"
readyset-sql-passes = { path = "../readyset-sql-passes" }

[dev-dependencies]
mysql_async = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serial_test = "0.5"
