[package]
name = "query-generator"
publish = false
version = "0.1.0"
authors = ["ReadySet Technology, Inc. <info@readyset.io>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
derive_more = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
proptest = { workspace = true }
test-strategy = { workspace = true }
rust_decimal = { workspace = true }
eui48 = { workspace = true }
uuid = { workspace = true }
bit-vec = { workspace = true, features = ["serde"] }
rand_regex = { workspace = true }
zipf = { workspace = true }
parking_lot = { workspace = true }
growable-bloom-filter = { workspace = true }

data-generator = { path = "../data-generator" }
nom-sql = { path = "../nom-sql" }
readyset-data = { path = "../readyset-data/" }
readyset-sql-passes = { path = "../readyset-sql-passes" }
readyset-util = { path = "../readyset-util" }

[dev-dependencies]
mysql_async.workspace = true
serial_test = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-postgres.workspace = true
test-utils = { path = "../test-utils" }
