[package]
name = "query-generator"
publish = false
version = "0.1.0"
authors = ["ReadySet Technology, Inc. <info@readyset.io>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
derive_more = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true }
strum_macros = { workspace = true }
proptest = { workspace = true }
test-strategy = { workspace = true }
parking_lot = { workspace = true }

data-generator = { path = "../data-generator" }
readyset-data = { path = "../readyset-data/" }
readyset-sql = { path = "../readyset-sql" }
readyset-sql-passes = { path = "../readyset-sql-passes" }
readyset-util = { path = "../readyset-util" }

[dev-dependencies]
mysql_async.workspace = true
serial_test = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-postgres.workspace = true
test-utils = { path = "../test-utils" }

[lints]
workspace = true
