[package]
name = "query_generator"
version = "0.1.0"
authors = ["Griffin Smith <root@gws.fyi>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
colored = "2.0.0"
criterion = "0.3.4"
derive_more = "0.99.11"
futures-util = "0.3.13"
humantime = "2.1.0"
itertools = "0.10.0"
lazy_static = "1.4.0"
nom-sql = { version = "0.0.11", path = "../nom-sql" }
noria = { version = "0.7", path = "../noria/noria/" }
noria-server = { version = "0.7", path = "../noria/server/" }
serde = { version = "1.0.123", features = ["derive"] }
strum = "0.20.0"
strum_macros = "0.20.1"
tokio = "0.2.0"
toml = "0.5.8"
