[package]
name = "query_generator"
publish = false
version = "0.1.0"
authors = ["Griffin Smith <root@gws.fyi>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
chrono = "0.4.19"
clap = { version = "3.0", features = ["derive","env"] }
derive_more = "0.99.11"
futures-util = "0.3.13"
itertools = "0.10"
lazy_static = "1.4.0"
nom-sql = { path = "../nom-sql" }
noria-data = { path = "../noria/data/" }
rand = "0.8.3"
regex = "1.4.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.63"
strum = "0.23"
strum_macros = "0.23"
thiserror = "1.0.26"
launchpad = { path = "../launchpad" }
proptest = "1.0.0"
test-strategy = "0.2.0"
rust_decimal = { version = "1.16" }
eui48 = { version = "1.1", default-features = false }
uuid = "0.8"
bit-vec = { version = "0.6", features = ["serde"] }
rand_regex = "0.15.1"
zipf = "7.0.0"
parking_lot = "0.11.2"
growable-bloom-filter = "2.0.1"
noria-sql-passes = { path = "../noria/server/sql-passes" }
