[package]
name = "reader-map"
version = "0.1.0"
publish = false
authors = ["Readyset Technology, Inc. <info@readyset.io>"]
edition = "2021"
autotests = false

[[test]]
name = "tests"
path = "tests.rs"

[build-dependencies]
test-discovery = { path = "../test-discovery" }

[dependencies]
antithesis_sdk = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
iter-enum = { workspace = true }
left-right = { workspace = true }
metrics = { workspace = true }
petgraph = { workspace = true }
quanta = { workspace = true }
rand = { workspace = true }
smallvec = { workspace = true, features = ["union"] }
thiserror = { workspace = true }
triomphe = { workspace = true }

partial-map = { path = "../partial-map" }
readyset-client = { path = "../readyset-client" }
readyset-util = { path = "../readyset-util" }

[dev-dependencies]
proptest = { workspace = true }
test-strategy = { workspace = true }
test-utils = { path = "../test-utils" }


[lints]
workspace = true
